--- a/mta.yaml
+++ b/mta.yaml
@@ -8,6 +8,7 @@ modules:
     requires:
       - name: trp4_hdi_sd_db
       - name: trp4_hdi_pr_db
+      - name: trp4_sch_jobs
 
 resources:
   - name: trp4_hdi_sd_db
@@ -21,3 +22,12 @@ resources:
     parameters:
       service-tags:
         - trp4_pr_db
+
+  - name: trp4_sch_jobs
+    type: com.sap.xs.job-scheduler
+    parameters:
+      service: jobscheduler
+      service-plan: default
+      config:
+        enable-xsuaa-support: true
+        
