.NPMRC file updated

--- a/srv/.npmrc
+++ b/srv/.npmrc
@@ -1,4 +1,4 @@
-# default npm SAP repo
-@sap:registry=http://nexus.wdf.sap.corp:8081/nexus/content/groups/build.milestones.npm/
-registry=http://nexus.wdf.sap.corp:8081/nexus/content/groups/build.milestones.npm/
-package-lock=false
+strict-ssl=false
+@sap:registry=https://npm.sap.com
+registry=https://registry.npmjs.com/
+
