--- a/srv/package.json
+++ b/srv/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sap/hdbext": "7.0.0",
     "@sap/xsenv": "3.0.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "axios": "0.20.0"
   }
 }
