--- a/srv/.npmrc
+++ b/srv/.npmrc
@@ -1,4 +1,4 @@
 # default npm SAP repo
-@sap:registry=http://nexus.wdf.sap.corp:8081/nexus/content/groups/build.milestones.npm/
-registry=http://nexus.wdf.sap.corp:8081/nexus/content/groups/build.milestones.npm/
+@sap:registry=https://int.repositories.cloud.sap/artifactory/api/npm/build-releases-npm/
+registry=https://int.repositories.cloud.sap/artifactory/api/npm/build-releases-npm/
 package-lock=false
